<resources>
    <string name="app_name">City Guide Tutorial</string>
    <string name="powered_by">Powered by Angelo</string>

    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="logo_name">Get A Way</string>
    <string name="search_text">Search...</string>
    <string name="restaurants">Restaurants</string>
    <string name="hotels">Hotels</string>
    <string name="airports">Airports</string>
    <string name="shops">Shops</string>
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most viewed locations</string>
    <string name="view_all">View All</string>
    <string name="categories">categories</string>
    <string name="mc_donalds_description">McDonald\'s is a fast-food chain known for its burgers. It has a global presence and serves millions of customers every day.</string>
    <string name="mcdonald_s">McDonald\'s</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="categories_caps">CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="login">Login</string>
    <string name="profile">PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="bank">BANK</string>
    <string name="education">EDUCATION</string>
    <string name="shops_caps">SHOPS</string>
    <string name="slogan_name">Everything your city holds is here!</string>
    <string name="expand_all">Expand All</string>
    <string name="car_rent">Car Rents</string>
    <string name="malls">Malls</string>
    <string name="grow_your_business">Grow Your Business</string>
    <string name="retailer_tag_line">We will help grow your business</string>
    <string name="sign_up">SIGN UP</string>
    <string name="how_we_work">How we work?</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="next_bt">Next</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="select_your_age">Select Your Age</string>
    <string name="op_code_text">Co\nde</string>
    <string name="verification">Verification</string>
    <string name="otp_description_text">Enter the code sent to +XXXXXXXXXX</string>
    <string name="verify_code">Verify Code</string>
    <string name="reset_password_details">Provide your phone number to get the code to reset your password</string>
    <string name="enter_email">Enter Email</string>
    <string name="main_selection_detail">Select which contact detail should we use to reset your password.</string>
    <string name="make_selection">Make Selection</string>
    <string name="via_sms">via sms:</string>
    <string name="via_email">via email:</string>
    <string name="support_gmail_com">support@gmail.com</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_detail">Your identity has been verified! set your new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_updated">Password Updated</string>
    <string name="password_sucess_message">Your password has been updated!</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>