<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.VerifyOTP"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/verify_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_icon"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op_code_text"
            android:textSize="100sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_black"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:includeFontPadding="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification"
            android:textSize="24sp"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_black"
            android:textAllCaps="true"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_description_text"
            android:textSize="16sp"
            android:includeFontPadding="false"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_light_italic"
            android:textAllCaps="true"
            android:layout_gravity="center"/>

        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemWidth="50dp"
            app:itemHeight="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:lineColor="@color/black"
            android:itemBackground="@color/white"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemRadius="5dp"/>

        <Button
            android:id="@+id/verify_code_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_code"
            android:backgroundTint="@color/mainColor"
            android:layout_marginTop="30dp"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>