<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.MakeSelection"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/go_back_btn"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_selection_detail"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_light_italic"
            android:layout_marginTop="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/lightWhite"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="100dp"
                android:layout_height="107dp"
                android:layout_centerVertical="true"
                android:src="@drawable/android_phone_icon" />

            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="@string/via_sms"
                android:textSize="25sp"
                android:layout_toEndOf="@id/mobile_icon"
                android:layout_marginTop="40dp"/>

            <TextView
                android:id="@+id/mobile_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="+55 55984622958"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_toEndOf="@id/mobile_icon"
                android:layout_below="@id/mobile_title"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/lightWhite"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="100dp"
                android:layout_height="107dp"
                android:layout_centerVertical="true"
                android:src="@drawable/email_icon" />

            <TextView
                android:id="@+id/mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="@string/via_email"
                android:textSize="25sp"
                android:layout_toEndOf="@id/mail_icon"
                android:layout_marginTop="40dp"/>

            <TextView
                android:id="@+id/mail_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="@string/support_gmail_com"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_toEndOf="@id/mail_icon"
                android:layout_below="@id/mail_title"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>